# Common-IPC-code

common_ipc/: README.md
common_ipc/karcher/: CMakeLists.txt
common_ipc/karcher/include/tinkerforge/: brick_imu_v2.h
common_ipc/karcher/launch/: NAV.launch  Nav_SF.launch  Nav_WF.launch  Nav_ZZ.launch  Nav_ZZ.launch.save  bthere.launch  check_lidar.launch  lidar0.launch  lidar1.launch  new.launch  one.launch  power.launch  power_wss.launch  pwm_based.launch  sense.launch  sense_wss.launch  switched_pwm.launch
common_ipc/karcher/scripts/: 18_ipc_firmware_DS_CL.hex  25_IPC_10s_dead_switch.hex  25_IPC_2_10s_dead_switch.hex  IPC_current_limit.hex  IPC_firmware.hex  Readme  basic_IPC_firmware_dead_10s.hex  ipc_firmware_DS_CL.ino.TEENSY35_3s_Alarm.hex  ipc_firmware_DS_CL.ino.TEENSY35_5s.hex  lidar.py  pwm_10s_dead_switch.hex  teleop.ino.TEENSY35-1.hex  updatedbv_25_IPC_2_10s_dead_switch.hex
common_ipc/karcher/src/: Distance_control.cpp  Encoder_data_Node_wiring.cpp  Heading_control.cpp  Motion_wiring.cpp  Navigation_ZZ.cpp  Position_control.cpp  Speed_control.cpp  Turn_control.cpp  brs_check_lidar.cpp  brs_checking.cpp  brs_current.cpp  brs_debug_status.cpp  brs_dt.cpp  brs_left_step.cpp  brs_left_wall.cpp  brs_left_wall_pwm.cpp  brs_motor_current.cpp  brs_node_check.cpp  brs_odom.cpp  brs_pose_data.cpp  brs_pose_str.cpp  brs_pose_strold.cpp  brs_pose_without_ekf.cpp  brs_right_step.cpp  brs_right_wall.cpp  brs_right_wall_pwm.cpp  brs_sense.cpp  brs_sense_pwm.cpp  brs_str.cpp  brs_teleop.cpp  brs_teleop_wss.cpp  brs_vis_both.cpp  bthere.cpp  command_office.cpp  debug_header.cpp  debug_sensor.h  karcher_teleop_com_def.cpp  karcher_teleop_old.cpp  karcher_teleop_termios.cpp  left_hybrid.cpp  (+6 more)
common_ipc/karcher/src/WiringPi/: softPwm.c
common_ipc/karcher/src/tinkerforge/: brick_imu_v2.cpp
common_ipc/wspp/: CMakeLists.txt~  ws_client_recon.cpp
common_ipc/wspp/launch/: webskt.launch
common_ipc/wspp/src/: debug_client.cpp  karcher_teleop_ws.cpp  old.cpp  ws_client_recon.cpp  wss_client.cpp  wss_ease.cpp  wss_ease.h  wss_first.cpp  wss_ping.cpp  wss_try.cpp
